# cgh-hololib-grpc

data/: hololib.proto
go-client/: main.go
go-client/protos/: hololib.pb.go  hololib.proto  hololib_grpc.pb.go
hololib-grpc-server/: CMakeLists.txt  server.cpp
hololib-grpc-server/protos/: hololib.grpc.pb.cc  hololib.grpc.pb.h  hololib.pb.cc  hololib.pb.h  hololib.proto
python-client/: cmd-client.py  gui-client.py  hololib_pb2.py  hololib_pb2.pyi  hololib_pb2_grpc.py
